# crewduwu

./: README.md  gitpuss.py  requirements.txt
crewdd-main/: .gitignore  pyproject.toml
crewdd-main/attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1744091897667.txt  Pasted-NoReverseMatch-at-projects-dashboard-create-project-Reverse-for-my-projects-not-found-my-proj-1744140150824.txt  Pasted-Operations-to-perform-Apply-all-migrations-accounts-admin-auth-contenttypes-projects-sessio-1744136353537.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-crewd-manage-py-line-20-in-mod-1744119026360.txt
crewdd-main/crewd/: db.sqlite3  views.py
crewdd-main/crewd/accounts/: forms.py  linkedin_scraper.py
crewdd-main/crewd/crewd/: asgi.py  settings.py  urls.py
crewdd-main/crewd/projects/: dashboard_views.py  services.py  urls.py
crewdd-main/crewd/static/css/: animations.css  dashboard.css
crewdd-main/crewd/templates/: base.html  dashboard.rar
crewdd-main/crewd/templates/accounts/: auth.html  role_selection.html
crewdd-main/crewd/templates/dashboard/: applicant.html  applicant_dashboard.html  chat.html  company_coming_soon.html  company_dashboard.html  invitations_list.html  leader.html  projects_list.html  quick_actions.html  talent_pool.html  team_leader_dashboard.html  view_application.html
crewdd-main/crewd/templates/includes/: pagination.html
crewdd-main/crewd/templates/projects/: create_project.html  dashboard_applicant.html  (+3 more)
crewdd-main/crewd_project/: asgi.py  settings.py.bak
(+56 files in other folders)
